--- a/back/static/questions.html
+++ b/back/static/questions.html
@@ -34,18 +34,52 @@
   <body>
     <section class="section">
       <div class="container">
-        <h1 class="title">Do you have tomatoes?</h1>
-        <div class="buttons">
-            <a class="button is-outlined is-success">
+
+        <h1 class="title">Do you have garlic?</h1>
+        <div class="buttons title-buttons">
+            <a class="button is-medium is-outlined is-success">
             Yes
             </a>
-            <a class="button is-outlined is-danger">
+            <a class="button is-medium is-outlined is-danger">
                 No
             </a>
         </div>
 
-        <p class="subtitle">What you can make:</p>
-        <p>Answer more questions to get recommendations</p>
+          <progress class="progress is-primary" value="15" max="100">15%</progress>
+
+
+          <hr>
+
+        <h1 class="custom-title">Recipes</h1>
+
+
+        <div class="columns is-mobile food-border">
+            <div class="column is-9">
+                <p class="food-title">Tika Panjabu</p>
+            </div>
+            <div class="column">
+                🌿 🔥
+            </div>
+        </div>
+
+      <div class="columns is-mobile food-border">
+          <div class="column is-9">
+              <p class="food-title">Frozen Blueberry Yogurt</p>
+          </div>
+          <div class="column">
+              🥛
+          </div>
+      </div>
+
+      <div class="columns is-mobile">
+          <div class="column is-9">
+              <p class="food-title">Homemade Snickers Bars</p>
+          </div>
+          <div class="column">
+              🥜
+          </div>
+      </div>
+
       </div>
       <br/>
 
@@ -60,19 +94,30 @@
     </div>
 
     <div class = "notification active">
-        <div class = "text">
-            <p class="is-5">Your pantry</p>
-            <div class="tags are-large">
-                <span class="tag">Spaghetti <button class="delete is-small"></button></span>
-                <span class="tag">Cucumber <button class="delete is-small"></button></span>
-                <span class="tag">Ketchup <button class="delete is-small"></button></span>
+
+        <div class="columns is-mobile">
+            <div class="column is-9">
+                <p class="is-5">Your pantry</p>
+            </div>
+            <div class="column">
+                <div class = "close" onclick="$('.notification').toggleClass('active')">
+                    <div class = "text">
+                        <i class="fas fa-sort-down"></i>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class = "close" onclick="$('.notification').toggleClass('active')">
-            <div class = "text">
-                <i class="fas fa-sort-down"></i>
+
+        <div class="columns is-mobile tag-column">
+            <div class="column">
+                <div class="tags">
+                    <span class="tag is-primary is-medium">Spaghetti <button class="delete is-small"></button></span>
+                    <span class="tag is-primary is-medium">Cucumber <button class="delete is-small"></button></span>
+                    <span class="tag is-primary is-medium">Ketchup <button class="delete is-small"></button></span>
+                </div>
             </div>
         </div>
+
     </div>
   </body>
 </html>
